--- a/ClientApp/Views/SettingsPage.xaml
+++ b/ClientApp/Views/SettingsPage.xaml
@@ -30,5 +30,11 @@
             <ToggleSwitch x:Name="BackgroundTaskToggleSwitch" Margin="10 0" Toggled="ToggleBackgroundTask"></ToggleSwitch>
         </StackPanel>
 
+        <StackPanel Orientation="Horizontal" Margin="0 10">
+            <TextBlock VerticalAlignment="Center">Use Fake Data service for easier testing:</TextBlock>
+            <TextBlock VerticalAlignment="Center" FontSize="10" Margin="10 0"> (Will be updated after app restart)</TextBlock>
+            <ToggleSwitch x:Name="UseFakeDateServiceToggleSwitch" Margin="10 0" Toggled="ToggleUseFakeDateService"></ToggleSwitch>
+        </StackPanel>
+
     </StackPanel>
 </Page>
