--- a/ClientApp/Views/NewListDialog.xaml
+++ b/ClientApp/Views/NewListDialog.xaml
@@ -1,20 +1,19 @@
 ﻿<ContentDialog
-    x:Class="ClientApp.Views.RequestListAccess"
+    x:Class="ClientApp.Views.NewListDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ClientApp.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
     mc:Ignorable="d"
-    Title="Request Access"
-    PrimaryButtonText="Request"
+    Title="Create a new list"
+    PrimaryButtonText="Create"
     SecondaryButtonText="Cancel"
-    PrimaryButtonClick="Request"
+    PrimaryButtonClick="Save"
     SecondaryButtonClick="Cancel">
 
     <StackPanel>
-        <TextBox x:Name="Email" PlaceholderText="Email address" extensions:TextBoxRegex.ValidationType="Email" KeyDown="OnTextBoxKeyDown"/>
+        <TextBox x:Name="ListName" PlaceholderText="List name" KeyDown="OnTextBoxKeyDown"/>
         <!--TODO: improve error styling-->
         <TextBlock x:Name="Error" Foreground="Red" Margin="0,5,0,0"></TextBlock>
     </StackPanel>
