#14 Make distinction between invited and subscribed users

--- a/ClientApp/Views/SubscriptionsMasterDetail.xaml
+++ b/ClientApp/Views/SubscriptionsMasterDetail.xaml
@@ -187,6 +187,8 @@
 
                 </DataTemplate>
             </controls:MasterDetailsView.DetailsTemplate>
+            
+            <!--TODO: Add extra options like unsubscribe from list...-->
 
         </controls:MasterDetailsView>
     </Grid>
