--- a/ClientApp/Views/NotificationPart.xaml
+++ b/ClientApp/Views/NotificationPart.xaml
@@ -12,9 +12,12 @@
         <Button Click="MarkAll" VerticalAlignment="Center" Margin="10 0 0 0" Background="Transparent">
             <SymbolIcon>Accept</SymbolIcon>
         </Button>
+        <Button Click="Refresh" VerticalAlignment="Center" Margin="10 0 0 0" Background="Transparent">
+            <SymbolIcon>Refresh</SymbolIcon>
+        </Button>
     </StackPanel>
 
-    <ListView x:Name="Notifications" ItemsSource="{x:Bind notifications}" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Height="300">
+    <ListView x:Name="NotificationsList" ItemsSource="{x:Bind Notifications}" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Height="300">
         <ListView.ItemTemplate>
             <DataTemplate x:DataType="m:Notification">
                 <Grid Margin="0 10">
@@ -35,7 +38,7 @@
                     </StackPanel>
 
                     <Button Click="Mark" Grid.Column="1" Visibility="{x:Bind IsUnread}" Background="Transparent" Tag="{x:Bind}">
-                        <SymbolIcon>Accept</SymbolIcon>
+                        <SymbolIcon Symbol="{x:Bind GetActionIcon()}"></SymbolIcon>
                     </Button>
 
                 </Grid>
