Finish Improved Realdataservice

--- a/ClientApp/Views/LoginRegisterPage.xaml
+++ b/ClientApp/Views/LoginRegisterPage.xaml
@@ -58,6 +58,6 @@
                 </StackPanel>
             </Button>
         </StackPanel>
-        
+        <!--TODO: Add loading spinner-->
     </Grid>
 </Page>
