--- a/ClientApp/Views/RequestListAccess.xaml
+++ b/ClientApp/Views/RequestListAccess.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
     mc:Ignorable="d"
-    Title="Request Access"
+    Title="Search user"
     PrimaryButtonText="Request"
     SecondaryButtonText="Cancel"
     PrimaryButtonClick="Request"
