--- a/ClientApp/Views/UserPage.xaml
+++ b/ClientApp/Views/UserPage.xaml
@@ -9,8 +9,32 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <StackPanel Padding="24">
-        <TextBlock x:Name="Id">ID</TextBlock>
-        <TextBlock x:Name="Email">Email</TextBlock>
-        <TextBlock x:Name="NameHeader">Full name</TextBlock>
+
+        <TextBlock
+            Text="Edit account"
+            Margin="0 24"
+            Style="{ThemeResource TitleTextBlockStyle}"/>
+
+        <TextBox x:Name="Email" PlaceholderText="Email address" Text="{x:Bind User.Email, Mode=TwoWay}" Width="250" HorizontalAlignment="Left" Margin="5"></TextBox>
+        <TextBox x:Name="FirstName" PlaceholderText="Firstname" Text="{x:Bind User.FirstName, Mode=TwoWay}" Width="250" HorizontalAlignment="Left" Margin="5"></TextBox>
+        <TextBox x:Name="LastName" PlaceholderText="Lastname" Text="{x:Bind User.LastName, Mode=TwoWay}" Width="250" HorizontalAlignment="Left" Margin="5"></TextBox>
+
+        <TextBlock x:Name="UserError" Visibility="Collapsed" Foreground="Red"/>
+
+        <Button Content="Save" Click="Save" Margin="0,10,0,0"/>
+
+        <TextBlock
+            Text="Change password"
+            Margin="0 40 0 24"
+            Style="{ThemeResource TitleTextBlockStyle}"/>
+
+        <PasswordBox x:Name="OldPass" PlaceholderText="Old password" Password="{x:Bind Passwords.OldPassword, Mode=TwoWay}" Width="250" HorizontalAlignment="Left" Margin="5"></PasswordBox>
+        <PasswordBox x:Name="NewPass" PlaceholderText="New password" Password="{x:Bind Passwords.NewPassword, Mode=TwoWay}" Width="250" HorizontalAlignment="Left" Margin="5"></PasswordBox>
+        <PasswordBox x:Name="ConfirmPass" PlaceholderText="Repeat new password" Password="{x:Bind Passwords.ConfirmPassword, Mode=TwoWay}" Width="250" HorizontalAlignment="Left" Margin="5"></PasswordBox>
+
+        <TextBlock x:Name="PasswordsError" Visibility="Collapsed" Foreground="Red"/>
+
+        <Button Content="Save" Click="ChangePassword" Margin="0,10,0,0"/>
+
     </StackPanel>
 </Page>
